# horeca

./: .env.example  .gitignore  .pdm.toml  Dockerfile  README.md  _server.py  config.py  config.yml  deps.py  docker-compose.yml  entrypoint.sh  loader.py  payment_handler.py  poster.py  pyproject.toml  requirements.txt  texts.py
admin-app/: pyproject.toml
admin-app/src/: __main__.py  app.py
admin-app/src/assets/kbs/: __init__.py
aioviber2/: __init__.py
aioviber2/bot/: api.py
aioviber2/dispatcher/: dispatcher.py  webhook.py
aioviber2/utils/: payload.py
api/: .pdm.toml  README.md  __init__.py  config.py  helpers.py  lib.py  main.py  models.py  payment.py  pyproject.toml  repr.py  texts.py
api/api/: __init__.py  config.py  helpers.py  loader.py  main.py  merchant.py  models.py  payment.py  repr.py  telegraph_image.py  texts.py
api/api/core/: document.py
api/tests/: __main__.py
app_telegram_ru/: .pdm.toml  pyproject.toml
app_telegram_ru/src/: __main__.py
app_telegram_ru/src/assets/kbs/: main.py
app_telegram_ru/src/core/: __init__.py  api.py  helpers.py
app_telegram_ru/src/handlers/: admin.py  start.py
app_telegram_ru/src/handlers/create_ad/: entry.py  invoice.py
app_telegram_ru/src/handlers/create_ad/fill/: company.py  pin_option.py
app_telegram_ru/tests/: __main__.py
app_telegram_ua/: __init__.py  config.py  loader.py  texts.py
app_telegram_ua/api/: __init__.py  misc.py
app_telegram_ua/conversations/: fill_ad.py
app_telegram_ua/handlers/: __init__.py  entry_point.py  exceptions.py
app_telegram_ua/keyboards/: __init__.py  change_ad.py  create_ad.py  main.py  misc.py  moderate_ad.py  my_ads_menu.py  payment.py
app_telegram_ua/tests/: ad.py  client.py  misc.py
app_telegram_ua/utils/: __init__.py  misc.py  repr.py
app_viber_ru/: config.py  loader.py
app_viber_ru/conversations/: fill_ad.py
app_viber_ru/keyboards/: __init__.py  change_ad.py  create_ad.py  misc.py  my_ads_menu.py  payment.py
app_viber_ru/utils/: photo_uploader.py
app_viber_ua/: config.py  texts.py
app_viber_ua/api/: misc.py
app_viber_ua/handlers/: entry_point.py
assets/: kbs.py
bot/: README.md  pyproject.toml
bot/src/: __main__.py  app.py  deps.py
bot/src/assets/kbs/: main.py
bot/src/core/: api.py  helpers.py
bot/src/handlers/: __init__.py  start.py
bot/src/handlers/create_ad/: __init__.py  entry.py  invoice.py
bot/src/handlers/create_ad/edit/: __init__.py  company.py  entry.py  vacancies.py
bot/src/handlers/create_ad/fill/: duplicate_option.py  phone.py  photo.py  pin_option.py  post_date.py  vacancies.py
bot/src/handlers/my_ads/: entry.py  flip_ads.py  next.py
bot/src/lib/: helpers.py  questions.py
bot/src/lib/storage_proxies/: ad.py
bot/tests/: __main__.py
configs/: telegram-ru.yml  tg-ua.yml  viber-ru.yml  viber-ua.yml
envs/: .env.example
locales/: ru.yml  ua.yml
main-app/: README.md  pyproject.toml
models/: ad.py  storage.py
scripts/: create_test_posts.py  dump_orders.py  migrate.py  run.sh
server/: .pdm.toml  pyproject.toml
server/src/: handler.py
telegram_app/: .pdm.toml  README.md  pyproject.toml
telegram_app/src/: __main__.py  app.py
telegram_app/src/assets/: session.py
telegram_app/src/assets/_kbs/: __init__.py  moderate_ad.py  my_ads_menu.py
telegram_app/src/assets/kbs/: __init__.py  main.py
telegram_app/src/core/: __init__.py
telegram_app/src/handlers/: __init__.py  admin.py
telegram_app/src/handlers/create_ad/: __init__.py  invoice.py
telegram_app/src/handlers/create_ad/edit/: company.py  entry.py  other_info.py  vacancies.py
telegram_app/src/handlers/create_ad/fill/: company.py  duplicate_option.py  extra_info.py  phone.py  photo.py  pin_option.py  post_date.py  vacancies.py  vacancy_amount.py
telegram_app/src/handlers/my_ads/: __init__.py  main_menu.py
telegram_app/src/lib/: helpers.py  questions.py
telegram_app/src/lib/storage_proxies/: __init__.py  ad.py
telegram_app/tests/: __main__.py
texts/: ru.yml  ua.yml
utils/: __init__.py  misc.py  payment.py
viber_app/: pyproject.toml
viber_app/src/: __main__.py  config.py  texts.py
viber_app/src/api/: __init__.py  misc.py
viber_app/src/assets/_kbs/: main.py  misc.py
viber_app/src/conversations/: fill_ad.py
viber_app/src/handlers/: __init__.py  entry_point.py  start.py
viber_app/src/handlers/create_ad/: invoice.py  start.py
viber_app/src/handlers/create_ad/edit/: __init__.py  company_info.py  extra_info.py  vacancies.py
viber_app/src/handlers/create_ad/edit_ad/: company_info.py  entry_points.py  extra_info.py  vacancies.py
viber_app/src/handlers/create_ad/fill/: vacancies.py
viber_app/src/handlers/create_ad/fill_ad/: __init__.py  company_info.py  entry_point.py  extra_info.py  vacancies.py
viber_app/src/handlers/my_ads/: entry_point.py  flip_ads.py  menu.py  re_post_ad.py
viber_app/src/keyboards/: change_ad.py  create_ad.py  main.py  misc.py  payment.py
viber_app/src/lib/: questions.py
viber_app/src/utils/: misc.py
viber_app/src/utils/storage_proxies/: ad.py
viber_app2/: pyproject.toml
viber_app2/src/: __main__.py  app.py
viber_app2/src/api0/: __init__.py  misc.py
viber_app2/src/assets/: session.py
viber_app2/src/assets/_kbs/: __init__.py  change_ad.py  create_ad.py  my_ads_menu.py  payment.py
viber_app2/src/assets/kbs/: main.py
viber_app2/src/conversations/: __init__.py
viber_app2/src/core/: api.py  helpers.py
viber_app2/src/handlers/: __init__.py  start.py
viber_app2/src/handlers/create_ad/: __init__.py  entry.py  invoice.py
viber_app2/src/handlers/create_ad/edit/: company.py  entry.py  entry_points.py  other_info.py  vacancies.py
viber_app2/src/handlers/create_ad/fill/: __init__.py  company.py  duplicate_option.py  extra_info.py  phone.py  photo.py  pin_option.py  post_date.py  vacancies.py  vacancy_amount.py
viber_app2/src/handlers/my_ads/: __init__.py  entry_point.py  flip_ads.py  re_post_ad.py
viber_app2/src/lib/: __init__.py  helpers.py  misc.py  questions.py
viber_app2/src/lib/storage_proxies/: ad.py
viber_app2/src/utils/: repr.py
viber_app2/tests/: __main__.py
(+86 files in other folders)
