[project]
name = ""
version = ""
description = ""
authors = []
dependencies = [
    "aiogram-ext>=0.1.11",
]
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/../api#egg=api",
]

[tool.pdm.scripts._]
env = { PYTHONPATH = "src" }

[tool.pdm.scripts]
start = { cmd = "python src", env_file = ".env" }

[tool.ruff]
ignore = ["F401"]
