[project]
name = ""
version = ""
description = ""
authors = []
dependencies = [
    "aiogram-ext>=0.0.5",
    "motor>=3.1.2",
    "mongoengine>=0.27.0",
    "cloudipsp>=1.0.4",
    "parsenv>=0.1.3",
]
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/../api#egg=api",
]

[tool.pdm.scripts._]
env_file = "../.env"
env = { PYTHONPATH = "src" }

[tool.pdm.scripts]
start = "python src"
test = "python tests"

[tool.ruff]
ignore = ["F401"]
