[project]
name = ""
version = ""
description = ""
authors = []
dependencies = [
    "aiogram-ext>=0.1.3",
]
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/../api#egg=api",
    "-e file:///D:/Projects/Modules/async-viber#egg=async-viber",
]

[tool.pdm.scripts._]
env = { PYTHONPATH = "src" }

[tool.pdm.scripts]
tg-ru = { cmd = "python src", env_file = "../tg-ru.env" }
tg-ua = { cmd = "python src", env_file = "../tg-ua.env" }
viber-ru = { cmd = "python src", env_file = "../viber-ru.env" }
viber-ua = { cmd = "python src", env_file = "../viber-ua.env" }
test = { cmd = "python tests", env_file = "../ru.env" }

[tool.ruff]
ignore = ["F401"]
