[project]
name = ""
version = ""
description = ""
authors = []
dependencies = [
    "aiogram-ext>=0.0.16",
]
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
dev = ["-e file:///${PROJECT_ROOT}/../api#egg=api"]

[tool.pdm.scripts._]
env = { PYTHONPATH = "src" }

[tool.pdm.scripts]
ru = { cmd = "python src", env_file = "../ru.env" }
ua = { cmd = "python src", env_file = "../ua.env" }
test = "python tests"

[tool.ruff]
ignore = ["F401"]
