[project]
name = ""
version = ""
description = ""
authors = [{ name = "levch", email = "levchenko.d.a1998@gmail.com" }]
dependencies = [
    "motor>=3.1.2",
]
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.pdm.scripts._]
env = { PYTHONPATH = "src" }

[tool.pdm.scripts]
ru = { cmd = "python src", env_file = "../viber-ru.env" }
ua = { cmd = "python src", env_file = "../viber-ua.env" }
test = { cmd = "python tests", env_file = "../viber-ru.env" }

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/../api#egg=api",
    "-e file:///D:/Projects/Modules/async-viber#egg=async-viber",
]
