[project]
name = ""
version = ""
description = ""
authors = []
dependencies = [
]
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/../api#egg=api",
    "-e file:///D:/Projects/Modules/async-viber#egg=async-viber",
]

[tool.pdm.scripts._]
env = { PYTHONPATH = "src" }

[tool.pdm.scripts]
ru = { cmd = "python src", env_file = "../viber-ru.env" }
ua = { cmd = "python src", env_file = "../viber-ua.env" }
test = "python tests"

[tool.ruff]
ignore = ["F401"]
